static/css/main.css
.nav-padding {
    padding-left : 8%;
    padding-right : 8%;
}

/* Sticky footer styles
-------------------------------------------------- */
html {
    position: relative;
    min-height: 100%;
}
body {
    /* Margin bottom by footer height */
    margin-bottom: 60px;
    padding-top: 70px;
    min-height: 2000px;
    background-image: url("../img/skulls-white.jpg")
}
.footer {
    position: absolute;
    bottom: 0;
    width: 100%;
    /* Set the fixed height of the footer here */
    height: 60px;
    background-color: #f5f5f5;
}


/* Custom page CSS
-------------------------------------------------- */
/* Not required for template or sticky footer method. */

.container {
    width: auto;
    max-width: 75%;
    padding: 0 15px;
}

.container .text-muted {
    margin: 20px 0;
}

.jumbotron {
    background-image: url("../img/pool-table.JPG");
    background-size: auto!important;
    background-repeat: no-repeat;
    background-position: center center;
    color: #e6e6e6
}

/* * {
    border-style: dashed;
    border-color: aqua;
    border-width: 2px;
}*/

.text {
    background-color: white;
    border-style: hidden;
    border-width: 1px;
    border-radius: 10px;
}

.feed {
    margin-top: 10px;
    margin-right: 0px;
    padding: 5px;
}

.feed-primary {
    margin-left: 0px;
}

